# TotalImage

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  SECURITY.md  docker-compose.yml
.github/workflows/: rust.yml
crates/fire-marshal/: Cargo.toml
crates/fire-marshal/src/: database.rs  error.rs  lib.rs  main.rs  registry.rs  server.rs  transport.rs
crates/totalimage-acquire/: Cargo.toml
crates/totalimage-acquire/src/: error.rs  hash.rs  lib.rs  progress.rs  raw.rs  vhd.rs
crates/totalimage-cli/: Cargo.toml
crates/totalimage-cli/src/: main.rs
crates/totalimage-core/: Cargo.toml
crates/totalimage-core/src/: error.rs  lib.rs  security.rs  traits.rs  types.rs
crates/totalimage-mcp/: Cargo.toml  README.md  claude_desktop_config.example.json
crates/totalimage-mcp/src/: auth.rs  cache.rs  lib.rs  main.rs  protocol.rs  server.rs  tools.rs  websocket.rs
crates/totalimage-pipeline/: Cargo.toml
crates/totalimage-pipeline/src/: lib.rs  mmap.rs  partial.rs
crates/totalimage-territories/: Cargo.toml
crates/totalimage-territories/src/: lib.rs
crates/totalimage-territories/src/exfat/: mod.rs  types.rs
crates/totalimage-territories/src/fat/: mod.rs  types.rs
crates/totalimage-territories/src/iso/: mod.rs  types.rs
crates/totalimage-territories/src/ntfs/: mod.rs  types.rs
crates/totalimage-vaults/: Cargo.toml
crates/totalimage-vaults/src/: factory.rs  lib.rs  raw.rs
crates/totalimage-vaults/src/aff4/: mod.rs  types.rs
crates/totalimage-vaults/src/e01/: mod.rs  types.rs
crates/totalimage-vaults/src/vhd/: mod.rs  types.rs
crates/totalimage-web/: Cargo.toml
crates/totalimage-web/src/: cache.rs  main.rs
crates/totalimage-zones/: Cargo.toml
crates/totalimage-zones/src/: lib.rs
crates/totalimage-zones/src/gpt/: mod.rs  types.rs
crates/totalimage-zones/src/mbr/: mod.rs  types.rs
k8s/: configmap.yaml  deployment.yaml  ingress.yaml  service.yaml
node-red-contrib-totalimage/: README.md  package.json
node-red-contrib-totalimage/nodes/: totalimage-analyze.html  totalimage-analyze.js  totalimage-config.html  totalimage-config.js  totalimage-extract.html  totalimage-extract.js  totalimage-list-files.html  totalimage-list-files.js  totalimage-list-partitions.html  totalimage-list-partitions.js  totalimage-validate-integrity.html  totalimage-validate-integrity.js
release/v0.1.0-alpha/: RELEASE-NOTES.md  totalimage  totalimage-web
steering/: CONVERSION-ROADMAP.md  CRYPTEX-DICTIONARY.md  GAP-ANALYSIS-DEPLOYMENT.md  GAP-ANALYSIS.md  IMPLEMENTATION-STATUS.md  PSEUDOCODE.md  PYRO-INTEGRATION-DESIGN.md  PYRO-INTEGRATION-INVENTORY.md  SDLC-ROADMAP.md  SECURITY-IMPROVEMENTS.md  STATUS-INDEX.md
steering/cells/front/: FRONT-COLLECTIVE.md
steering/cells/territories/: TERRITORY-COLLECTIVE.md
steering/cells/vaults/: VAULT-COLLECTIVE.md
steering/cells/zones/: ZONE-COLLECTIVE.md
steering/infrastructure/: REDB-SCHEMA.md  RUST-CRATE-STRUCTURE.md
