[package]
name = "totalimage-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[[bin]]
name = "totalimage"
path = "src/main.rs"

[dependencies]
totalimage-core = { path = "../totalimage-core" }
totalimage-pipeline = { path = "../totalimage-pipeline" }
totalimage-vaults = { path = "../totalimage-vaults" }
totalimage-zones = { path = "../totalimage-zones" }
totalimage-territories = { path = "../totalimage-territories" }
clap.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
