[package]
name = "totalimage-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
thiserror.workspace = true
serde.workspace = true
async-trait.workspace = true
chrono.workspace = true
md5.workspace = true
sha1.workspace = true
