[package]
name = "totalimage-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[[bin]]
name = "totalimage-mcp"
path = "src/main.rs"

[lib]
name = "totalimage_mcp"
path = "src/lib.rs"

[dependencies]
# TotalImage crates
totalimage-core = { path = "../totalimage-core" }
totalimage-pipeline = { path = "../totalimage-pipeline" }
totalimage-vaults = { path = "../totalimage-vaults" }
totalimage-zones = { path = "../totalimage-zones" }
totalimage-territories = { path = "../totalimage-territories" }

# Async runtime
tokio = { workspace = true, features = ["full"] }
async-trait = { workspace = true }

# Web framework for HTTP transport
axum = { workspace = true }

# Serialization
serde.workspace = true
serde_json = { workspace = true }
bincode.workspace = true

# CLI argument parsing
clap = { workspace = true, features = ["derive"] }

# Error handling
thiserror.workspace = true
anyhow = { workspace = true }

# Logging
tracing.workspace = true
tracing-subscriber.workspace = true

# Database (shared redb cache)
redb.workspace = true

# HTTP client for Fire Marshal registration
reqwest = { workspace = true, features = ["json"] }

# Authentication
jsonwebtoken.workspace = true
chrono.workspace = true

[dev-dependencies]
tempfile.workspace = true
