[package]
name = "totalimage-vaults"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
totalimage-core = { path = "../totalimage-core" }
totalimage-pipeline = { path = "../totalimage-pipeline" }
thiserror.workspace = true
md5.workspace = true
sha1.workspace = true
uuid.workspace = true
serde.workspace = true
flate2.workspace = true
zip.workspace = true
snap.workspace = true
lz4_flex.workspace = true
tracing.workspace = true

[dev-dependencies]
tempfile.workspace = true
