[package]
name = "totalimage-web"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[[bin]]
name = "totalimage-web"
path = "src/main.rs"

[dependencies]
totalimage-core = { path = "../totalimage-core" }
totalimage-vaults = { path = "../totalimage-vaults" }
totalimage-zones = { path = "../totalimage-zones" }
totalimage-territories = { path = "../totalimage-territories" }
axum.workspace = true
tokio.workspace = true
tower.workspace = true
tower-http.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
redb.workspace = true
bincode.workspace = true

[dev-dependencies]
tempfile.workspace = true
