[package]
name = "totalimage-zones"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
totalimage-core = { path = "../totalimage-core" }
totalimage-pipeline = { path = "../totalimage-pipeline" }
thiserror.workspace = true
uuid.workspace = true
serde.workspace = true
crc32fast.workspace = true
